<resources>
    <string name="app_name">OwnLog</string>
    <string name="title_settings">@string/settings</string>
    <string name="title_about">@string/about</string>
    <string name="title_log_item_add">New entry: %s</string>
    <string name="title_log_item_edit">Edit entry: %s</string>
    <string name="title_log_item_show">%s</string>
    <string name="title_tag_item_add">Add tag</string>
    <string name="title_tag_item_edit">Edit tag</string>
    <string name="title_log_filter_add">Add filter</string>
    <string name="title_log_filter_edit">Edit filter</string>
    <string name="title_import_log">Import selection</string>
    <string name="action_add">@string/add</string>
    <string name="action_attachments">@string/attachments</string>
    <string name="action_delete">@string/delete</string>
    <string name="action_edit">@string/edit</string>
    <string name="action_save">@string/save</string>
    <string name="action_search">@string/search</string>
    <string name="action_select_all">@string/select_all</string>
    <string name="action_tag">@string/tags</string>
    <string name="action_strategy">@string/strategy</string>
    <string name="action_import">@string/import1</string>
    <string name="action_layout_continuous">Show content</string>
    <string name="action_exit">@string/exit</string>
    <string name="drawer_filters">@string/filters</string>
    <string name="drawer_add_filter">Add filter&#8230;</string>
    <string name="drawer_more">@string/more</string>
    <string name="drawer_settings">@string/settings</string>
    <string name="drawer_about">@string/about</string>
    <string name="drawer_data_management">Data management</string>
    <string name="drawer_export">@string/export</string>
    <string name="drawer_import">@string/import1</string>
    <plurals name="action_mode_selected_items">
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="dialog_add">@string/add</string>
    <string name="dialog_cancel">@string/cancel</string>
    <string name="dialog_ok">@string/ok</string>
    <string name="dialog_request_password">Password required</string>
    <string name="dialog_set_password">Set password</string>
    <string name="dialog_change_password">Change password</string>
    <string name="dialog_remove_password">Remove password?</string>
    <string name="dialog_unsaved_changes">Unsaved changes present</string>
    <string name="dialog_save_changes">@string/save</string>
    <string name="dialog_discard_changes">@string/discard</string>
    <string name="dialog_delete_log_entry">Delete log entry?</string>
    <string name="dialog_delete_log_entry_title">Delete log entry \"%s\"?</string>
    <plurals name="dialog_delete_log_entries">
        
        <item quantity="other">Delete %d log entries?</item>
    </plurals>
    <string name="dialog_delete">@string/delete</string>
    <string name="dialog_delete_tag_entry_title">Delete tag \"%s\"?</string>
    <string name="dialog_delete_tag_entry_message">WARNING: if you delete this tag, it will be removed from all log entries it is currently added to. Continue?</string>
    <string name="dialog_deleted_tag_entry_toast_title">Deleted tag \"%s\"</string>
    <string name="dialog_select_tags">Select tags</string>
    <string name="dialog_delete_log_filter_entry_title">Delete filter \"%s\"?</string>
    <string name="dialog_deleted_log_filter_entry_toast_title">Deleted filter \"%s\"</string>
    <string name="dialog_delete_attachment">Delete \"%s\"?</string>
    <string name="dialog_delete_attachment_title">Delete attachment</string>
    <string name="edit_password_hint">Enter password</string>
    <string name="edit_wrong_password">Wrong password</string>
    <string name="edit_old_password">Old password</string>
    <string name="edit_new_password">New password</string>
    <string name="edit_confirm_password">Confirm new password</string>
    <string name="edit_wrong_confirm_password">Passwords don\'t match</string>
    <string name="edit_log_item_title">@string/title</string>
    <string name="edit_log_item_content">@string/content</string>
    <string name="edit_log_item_date">@string/date</string>
    <string name="edit_log_tags">Tags:</string>
    <string name="edit_log_tags_add">Add tag</string>
    <string name="edit_log_tags_add_new">New tag&#8230;</string>
    <string name="edit_exclude_log_tags">Exclude tags:</string>
    <string name="edit_tag_item_name">@string/name</string>
    <string name="edit_tag_item_description">Description</string>
    <string name="edit_tag">@string/edit</string>
    <string name="has_attachments">Has attachments</string>
    <string name="log_attachments_show">@string/attachments</string>
    <string name="edit_log_attachments_add">Add attachment</string>
    <string name="edit_log_attachment_rename">@string/rename</string>
    <string name="edit_log_attachment_rename_title">Enter name</string>
    <string name="edit_log_attachment_delete">@string/delete</string>
    <string name="edit_log_attachment_name_exists">Name already used for another attachment</string>
    <string name="edit_log_attachment_name_default">@string/attachment</string>
    <string name="add_log_attachment_progress_title">Adding attachment</string>
    <string name="add_log_attachment_progress_message">Copying file to app storage, this might take a while depending on the file size</string>
    <string name="error_tag_with_name_exists">Another tag with the same name already exists</string>
    <string name="error_should_not_be_empty">Should not be empty</string>
    <string name="error_internal">Internal error</string>
    <string name="error_io_in">Error reading file</string>
    <string name="error_io_out">@string/error_internal</string>
    <string name="error_upgrade_title">Upgrade failure</string>
    <string name="error_upgrade_summary">It seems you are coming from an unsupported version of this app. Please upgrade this app, or clear its app data (you will lose all your logs, settings etc. this way).</string>
    <string name="error_downgrade_summary">It seems you are coming from a newer version of this app. Please upgrade this app, or clear its app data (you will lose all your logs, settings etc. this way).</string>
    <string name="error_import_failure_title">Import failed</string>
    <string name="error_import_failure_message">The backup cannot be read! Maybe it was generated with a later version of this app, or tampered with.</string>
    <string name="error_permission_denied_read_external_storage">Missing permission to read external storage</string>
    <string name="edit_log_filter_name">@string/name</string>
    <string name="edit_log_filter_sort_order">"Sort order: "</string>
    <string name="edit_log_filter_tags_strict_no_tags">"Show only entries without any tags: "</string>
    <string name="edit_log_filter_tags_strict_tags">"Show only entries assigned to all of those tags: "</string>
    <string name="log_filter_default_name">Show all</string>
    <string name="log_filter_default_new_name">New filter</string>
    <string name="edit_log_filter_sort_order_date_descending">New entries first</string>
    <string name="edit_log_filter_sort_order_date_ascending">Old entries first</string>
    <string name="date_format_overview_1">MMM y</string>
    <string name="date_format_overview_2">"dd "</string>
    <string name="date_format_overview_3">E H:mm</string>
    <string name="date_format_full_date_time">y/MM/dd H:mm</string>
    <string name="date_format_date_for_title">MMM dd. (y)</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_category_ui">User interface</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_default_filter_title">Default filter</string>
    <string name="pref_date_formats_title">Date formats</string>
    <string name="pref_date_formats_summary">Change the format of the displayed dates and time</string>
    <string name="pref_date_formats_explanation_title">How it works</string>
    <string name="pref_date_formats_explanation_summary">The date format is specified by a pattern, interpreted by java\'s SimpleDateFormat. You can build it from some available suggestions, or completely on your own. Leave the setting empty to use the preset.</string>
    <string name="pref_date_format_overview_1_title">List section header</string>
    <string name="pref_date_format_overview_2_title">Entry (highlighted part)</string>
    <string name="pref_date_format_overview_3_title">Entry (detailed part)</string>
    <string name="pref_date_format_full_date_time_title">Title (long)</string>
    <string name="pref_date_format_date_for_title_title">Title (short)</string>
    <string name="about_app_title">@string/app_name</string>
    <string name="about_app_summary">Version %1$s (%2$d)</string>
    <string name="about_licence_title">Licence</string>
    <string name="about_licence_summary">This app is published under the GNU GENERAL PUBLIC LICENSE, Version 3.</string>
    <string name="about_licence_link" translatable="false">https://www.gnu.org/licenses/gpl.html</string>
    <string name="about_source_code_title">Source code</string>
    <string name="about_source_code_summary">https://github.com/SpiritCroc/OwnLog</string>
    <string name="about_source_code_link" translatable="false">https://github.com/SpiritCroc/OwnLog</string>
    <string name="about_category_third_party">Third party</string>
    <string name="about_third_party_flexbox_title">FlexboxLayout</string>
    <string name="about_third_party_flexbox_summary">Copyright &#169; Google Inc.\n\nLicensed under the Apache License, Version 2.0.</string>
    <string name="about_third_party_flexbox_link" translatable="false">https://github.com/google/flexbox-layout</string>
    <string name="about_third_party_indeterminate_checkbox_title">indeterminate-checkbox</string>
    <string name="about_third_party_indeterminate_checkbox_summary">Copyright &#169; Svetlozar Kostadinov (sevar83)\n\nLicensed under the Apache License, Version 2.0.</string>
    <string name="about_third_party_indeterminate_checkbox_link" translatable="false">https://github.com/sevar83/indeterminate-checkbox</string>
    <string name="about_third_party_material_design_icons_title">Material design icons</string>
    <string name="about_third_party_material_design_icons_summary">Copyright &#169; Google Inc.\n\nLicensed under the Apache License, Version 2.0.</string>
    <string name="about_third_party_material_design_icons_link" translatable="false">https://material.io/icons/</string>
    <string name="about_third_party_material_drawer_title">MaterialDrawer</string>
    <string name="about_third_party_material_drawer_summary">Copyright &#169; Mike Penz\n\nLicensed under the Apache License, Version 2.0.</string>
    <string name="about_third_party_material_drawer_link" translatable="false">https://github.com/mikepenz/MaterialDrawer</string>
    <string name="about_third_party_sqlcipher_title">SQLCipher for Android Application Integration</string>
    <string name="about_third_party_sqlcipher_summary">Copyright &#169; 2010 Zetetic LLC\n\nThe SQLCipher code itself is licensed under a BSD-style license from Zetetic LLC. Finally, the original SQLite code itself is in the public domain.</string>
    <string name="about_third_party_sqlcipher_link" translatable="false">https://github.com/sqlcipher/android-database-sqlcipher</string>
    <string name="about_third_party_support_title">Support libraries</string>
    <string name="about_third_party_support_summary">Copyright &#169; The Android Open Source Project\n\nLicensed under the Apache License, Version 2.0.</string>
    <string name="about_third_party_support_link" translatable="false">https://developer.android.com/topic/libraries/support-library/index.html</string>
    <string name="easteregg">Semmelknödel</string>
    <string name="preview">Preview</string>
</resources>