<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2017-2018 SpiritCroc
    Email: spiritcroc@gmail.com
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_about">

    <Preference
        android:key="about_app"
        android:title="@string/about_app_title"
        android:summary="@string/about_app_summary" />
    <Preference
        android:key="about_licence"
        android:title="@string/about_licence_title"
        android:summary="@string/about_licence_summary">
        <intent android:action="android.intent.action.VIEW"
            android:data="@string/about_licence_link" />
    </Preference>
    <Preference
        android:title="@string/about_source_code_title"
        android:summary="@string/about_source_code_summary">
        <intent android:action="android.intent.action.VIEW"
            android:data="@string/about_source_code_link" />
    </Preference>

    <PreferenceCategory
        android:title="@string/about_category_third_party">

        <!-- For future usage
        <Preference
            android:title="@string/about_third_party_aosp_title"
            android:summary="@string/about_third_party_aosp_summary">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/about_third_party_aosp_link" />
        </Preference>
        -->
        <Preference
            android:title="@string/about_third_party_flexbox_title"
            android:summary="@string/about_third_party_flexbox_summary">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/about_third_party_flexbox_link" />
        </Preference>
        <Preference
            android:title="@string/about_third_party_indeterminate_checkbox_title"
            android:summary="@string/about_third_party_indeterminate_checkbox_summary">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/about_third_party_indeterminate_checkbox_link" />
        </Preference>
        <Preference
            android:title="@string/about_third_party_material_design_icons_title"
            android:summary="@string/about_third_party_material_design_icons_summary">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/about_third_party_material_design_icons_link" />
        </Preference>
        <Preference
            android:title="@string/about_third_party_material_drawer_title"
            android:summary="@string/about_third_party_material_drawer_summary">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/about_third_party_material_drawer_link" />
        </Preference>
        <Preference
            android:title="@string/about_third_party_sqlcipher_title"
            android:summary="@string/about_third_party_sqlcipher_summary">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/about_third_party_sqlcipher_link" />
        </Preference>
        <Preference
            android:title="@string/about_third_party_support_title"
            android:summary="@string/about_third_party_support_summary">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/about_third_party_support_link" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>
