<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2017 SpiritCroc
    Email: spiritcroc@gmail.com
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_date_formats_title">

    <Preference
        android:title="@string/pref_date_formats_explanation_title"
        android:summary="@string/pref_date_formats_explanation_summary"
        android:selectable="false"/>

    <de.spiritcroc.ownlog.preference.SimpleDateFormatPreference
        android:title="@string/pref_date_format_overview_1_title"
        android:key="pref_date_format_overview_1"
        app:emptyReplacementValue="@string/date_format_overview_1"/>

    <de.spiritcroc.ownlog.preference.SimpleDateFormatPreference
        android:title="@string/pref_date_format_overview_2_title"
        android:key="pref_date_format_overview_2"
        app:emptyReplacementValue="@string/date_format_overview_2"/>

    <de.spiritcroc.ownlog.preference.SimpleDateFormatPreference
        android:title="@string/pref_date_format_overview_3_title"
        android:key="pref_date_format_overview_3"
        app:emptyReplacementValue="@string/date_format_overview_3"/>

    <de.spiritcroc.ownlog.preference.SimpleDateFormatPreference
        android:title="@string/pref_date_format_full_date_time_title"
        android:key="pref_date_format_full_date_time"
        app:emptyReplacementValue="@string/date_format_full_date_time"/>

    <de.spiritcroc.ownlog.preference.SimpleDateFormatPreference
        android:title="@string/pref_date_format_date_for_title_title"
        android:key="pref_date_format_date_for_title"
        app:emptyReplacementValue="@string/date_format_date_for_title"/>

</PreferenceScreen>
