<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2017 SpiritCroc
    Email: spiritcroc@gmail.com
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dialog_horizontal_padding"
    android:paddingRight="@dimen/dialog_horizontal_padding"
    android:paddingTop="@dimen/dialog_top_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_log_filter_name"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <de.spiritcroc.ownlog.ui.view.EditTagsView
        android:id="@+id/edit_tags_view"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:addTagButton="@+id/add_tag_button"
        app:editTagMessageView="@+id/tag_msg">
        <TextView
            android:id="@id/tag_msg"
            android:text="@string/edit_log_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"/>
        <ImageView
            android:id="@id/add_tag_button"
            android:src="@drawable/ic_add_small"
            android:theme="@style/AddTagButton"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit_log_tags_add" />
    </de.spiritcroc.ownlog.ui.view.EditTagsView>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap">
        <TextView
            android:id="@+id/text_view_tags_strict_no_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:gravity="center_vertical|start"
            android:text="@string/edit_log_filter_tags_strict_no_tags" />
        <TextView
            android:id="@+id/text_view_tags_strict_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:gravity="center_vertical|start"
            android:text="@string/edit_log_filter_tags_strict_tags" />
        <CheckBox
            android:id="@+id/tags_strict_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start" />
    </com.google.android.flexbox.FlexboxLayout>

    <de.spiritcroc.ownlog.ui.view.EditTagsView
        android:id="@+id/edit_excluded_tags_view"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:addTagButton="@+id/add_exclude_tag_button"
        app:editTagMessageView="@+id/exclude_tag_msg">
        <TextView
            android:id="@id/exclude_tag_msg"
            android:text="@string/edit_exclude_log_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"/>
        <ImageView
            android:id="@id/add_exclude_tag_button"
            android:src="@drawable/ic_add_small"
            android:theme="@style/AddTagButton"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit_log_tags_add" />
    </de.spiritcroc.ownlog.ui.view.EditTagsView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_log_filter_sort_order" />
        <Spinner
            android:id="@+id/sort_order_spin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
