<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2017-2018 SpiritCroc
    Email: spiritcroc@gmail.com
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/attachment_margin"
    android:layout_marginLeft="@dimen/attachment_margin"
    android:layout_marginRight="@dimen/attachment_margin"
    app:cardBackgroundColor="?attr/backgroundColorPeekCard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/attachment_padding"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/attachment_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:lines="1"
                android:ellipsize="end" />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/attachment_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <ImageView
                android:id="@+id/rename_attachment_button"
                android:src="@drawable/ic_edit_small"
                android:theme="@style/AttachmentsButton"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit_log_attachment_rename" />
            <ImageView
                android:id="@+id/delete_attachment_button"
                android:src="@drawable/ic_delete_small"
                android:theme="@style/AttachmentsButton"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit_log_attachment_delete" />
        </LinearLayout>

        <ImageView
            android:id="@+id/attachment_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/attachment_margin"
            android:contentDescription="@string/preview"
            android:visibility="gone"/>

    </LinearLayout>

</android.support.v7.widget.CardView>
